# someOpenGlshit

./: .gitignore  CMakeLists.txt  CMakePresets.json
newc/: CMakeLists.txt  newc.cpp
src/: CMakeLists.txt  main.cpp  main.h  mainv2.cpp
src/Shaders/test/: fragment.glsl  vertex.glsl
src/engine/Objects/: ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture2d.cpp  Texture2d.h
